--- a/public/index.html
+++ b/public/index.html
@@ -6,46 +6,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart</title>
   <link rel="stylesheet" href="/css/tailwind.css">
+
+  <style>
+    body {
+      background: linear-gradient(to bottom, #71B280, #134E5E);
+    }
+  </style>
 </head>
 
-<body class="bg-gray-100 p-4">
+<body class="bg-gray-200 px-4 py-6 md:px-16">
   <div class="container mx-auto shop">
-    <h1 class="font-bold text-2xl">Shopping Cart</h1>
+    <h1 class="font-thin uppercase text-center my-4 text-6xl text-green-900">Shop</h1>
 
-    <h3 class="font-bold text-xl mt-4 text-center">Shop Items</h3>
-
-    <div class="flex flex-wrap my-6 justify-center shop-items">
+    <div class="bg-white rounded shadow-sm my-8 px-4 py-6 md:px-16">
+      <div class="bg-gray-200 rounded p-4 hidden sm:flex font-bold uppercase">
+        <div class="w-1/2">
+          Product
+        </div>
+        <div class="w-1/4 text-center">
+          Price
+        </div>
+        <div class="w-1/4 text-center">
+          Quantity
+        </div>
+      </div>
+      <div class="shop-items"></div>
     </div>
 
-    <h3 class="font-bold text-xl my-6 text-center">Shopping Cart</h3>
-    <table class="table-auto w-full md:w-3/4 mx-auto bg-white rounded mt-4">
-      <thead>
-        <tr>
-          <th class="px-4 py-2">Item</th>
-          <th class="px-4 py-2">Price</th>
-          <th class="px-4 py-2">Quantity</th>
-          <th class="px-4 py-2">Amount</th>
-        </tr>
-      </thead>
-      <tbody class="shopping-cart">
-      </tbody>
-    </table>
-    <div class="text-right px-4 py-2 mx-auto md:w-3/4 bg-white" colspan="4">Total: <span
-        class="font-bold cart-total">0</span></div>
-
-    <div class="my-8 w-1/4 mx-auto flex flex-col justify-center">
-      <input type="text" class="coupon p-2 rounded outline-none" placeholder="Enter coupon code, if any">
-      <button class="checkout shadow my-4 py-2 px-4 bg-green-400 hover:bg-green-500 rounded-sm text-white uppercase text-md font-bold leading-tight">Checkout</button>
-      
-      <div class="text-sm italic mt-1 coupon-text hidden">
+    <div class="flex flex-wrap flex-col sm:flex-row sm:items-start">
+      <div class="flex-grow bg-white rounded shadow-sm p-4 mb-8 sm:mb-0 sm:mr-6">
+        <h3 class="p-4 mb-2 bg-gray-200 font-bold uppercase rounded-full">Order Summary</h3>
+        <table class="table-auto w-full border-b">
+          <tbody class="cart">
+          </tbody>
+        </table>
+        <p class="pt-2 pb-4">Total: <span class="float-right font-bold cart-total">0</span></p>
       </div>
-      
-      <div class="checkout-value hidden">
-        <h3 class="font-bold">Amount: <span class="checkout-amount"></span></h3> 
-        <a class="shadow inline-block my-4 py-2 px-4 bg-green-400 hover:bg-green-500 rounded-sm text-white uppercase text-md font-bold leading-tight" href="#">Proceed to Payment</a>
+      <div class="align-top bg-white rounded shadow-sm  sm:w-1/2 p-4 mb-8 sm:mb-0 apply-coupon">
+        <h3 class="p-4 mb-4 bg-gray-200 font-bold uppercase rounded-full">Coupon Code</h3>
+        <div class="flex border rounded-full pl-4 pr-2 py-2">
+          <input class="coupon flex-grow" type="text" placeholder="Enter Coupon">
+          <button class="bg-gray-800 hover:bg-gray-900 text-white rounded-full px-4 py-2 checkout" type="button">
+            Apply
+          </button>
+        </div>
       </div>
     </div>
-
   </div>
 
   <script src="/js/script.js"></script>
